// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Config Angular2 Todo 1`] = `
{
  "directory": undefined,
  "extensions": [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
    ".vue",
  ],
  "final": {
    "components": [
      {
        "patterns": [
          "node_modules/*",
        ],
        "type": "Dependency",
      },
      {
        "patterns": [
          "**/*.ts",
          "**/*.js",
          "**/*.jsx",
          "**/*.tsx",
        ],
        "type": "Component",
      },
      {
        "format": "full",
        "patterns": [
          "**/*.vue",
        ],
        "type": "Vue",
      },
    ],
    "excludePatterns": [],
    "output": [
      {
        "groups": [
          {
            "components": [
              "Component",
              "Vue",
            ],
            "first": true,
          },
          {
            "components": [
              "Dependency",
            ],
            "type": "Dependencies",
          },
        ],
        "path": [
          "svg",
        ],
      },
    ],
  },
}
`;

exports[`Config Express 1`] = `
{
  "directory": undefined,
  "extensions": [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
    ".vue",
  ],
  "final": {
    "components": [
      {
        "patterns": [
          "node_modules/*",
        ],
        "type": "Dependency",
      },
      {
        "patterns": [
          "**/*.ts",
          "**/*.js",
          "**/*.jsx",
          "**/*.tsx",
        ],
        "type": "Component",
      },
      {
        "format": "full",
        "patterns": [
          "**/*.vue",
        ],
        "type": "Vue",
      },
    ],
    "excludePatterns": [],
    "output": [
      {
        "groups": [
          {
            "components": [
              "Component",
              "Vue",
            ],
            "first": true,
          },
          {
            "components": [
              "Dependency",
            ],
            "type": "Dependencies",
          },
        ],
        "path": [
          "express.svg",
        ],
      },
    ],
  },
}
`;

exports[`Config Sample 1`] = `
{
  "directory": undefined,
  "extensions": [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
    ".vue",
  ],
  "final": {
    "components": [
      {
        "format": "full",
        "patterns": [
          "./main.ts",
          "./utils.ts",
        ],
        "type": "App",
      },
      {
        "patterns": [
          "**/*.view.**",
        ],
        "type": "View",
      },
      {
        "patterns": [
          "**/**component.**",
        ],
        "type": "Component",
      },
      {
        "patterns": [
          "**/controllers/*",
        ],
        "type": "Controller",
      },
      {
        "patterns": [
          "**/models/*",
        ],
        "type": "Model",
      },
    ],
    "excludePatterns": [],
    "output": [
      {
        "groups": [
          {
            "components": [
              "View",
              "Controller",
            ],
            "type": "Main",
          },
          {
            "components": [
              "Component",
              "Model",
            ],
            "type": "Base",
          },
          {
            "patterns": [
              "**/*",
            ],
          },
        ],
        "path": [
          "./docs/architecture.puml",
        ],
      },
      {
        "groups": undefined,
        "path": [
          "./docs/architecture.svg",
        ],
      },
    ],
  },
}
`;
